Use ssh url for my own plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,4 +51,4 @@
 	url = https://github.com/sontek/rope-vim.git
 [submodule "bundle/project-manager"]
 	path = bundle/project-manager
-	url = https://github.com/NamelessOne2345/vim-project-manager.git
+	url = git@github.com:NamelessOne2345/vim-project-manager.git
