--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "bundle/vim-mathematica"]
 	path = bundle/vim-mathematica
 	url = git@github.com:rsmenon/vim-mathematica.git
+[submodule "bundle/solarized"]
+	path = bundle/solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
